# sphinx_rtd_theme__issue

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  index.rst  reference.rst
src/DUMMY/: dummy.py
src/DUMMY/test/: test.py
src/DUMMY/test/subtest/: subtest.py
